--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,116 +1,113 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">MedTimer</string>
-  <string name="tab_settings">Instellingen</string>
-  <string name="tab_overview">Overzicht</string>
-  <string name="tab_medicine">Geneesmiddel</string>
-  <string name="add_medicine">Medicijn toevoegen</string>
-  <string name="medicine_name">Naam medicijn</string>
-  <string name="add_reminder">Herinnering toevoegen</string>
-  <string name="edit">Bewerking</string>
-  <string name="delete">Verwijderen</string>
-  <string name="time">Tijd</string>
-  <string name="dosage">Dosering</string>
-  <string name="yes">Ja</string>
-  <string name="ok">OK</string>
-  <string name="cancel">Annuleren</string>
-  <string name="confirm">Bevestigen</string>
-  <string name="are_you_sure_delete_medicine">Weet u zeker dat u het geneesmiddel wilt verwijderen?</string>
-  <string name="no_reminders">Geen herinneringen ingesteld</string>
-  <plurals name="sum_reminders">
-       <item quantity="one">%1$d herinnering\n%2$s</item>
-       <item quantity="other">%1$d herinneringen\n%2$s</item>
-  </plurals>
-  <string name="channel_name" translatable="false">MedTimer</string>
-  <string name="channel_description" translatable="false">Meldingen van MedTimer</string>
-  <string name="notification_title">Medicijnherinnering</string>
-  <string name="notification_content">Het is %1$s - tijd om %2$s van %3$s%4$s te nemen</string>
-  <string name="notification_taken">GENOMEN</string>
-  <string name="taken">Genomen</string>
-  <string name="skipped">Overgeslagen</string>
-  <string name="reminder_event">%1$s van %2$s, %3$s</string>
-  <string name="recent_reminders">Recente evenementen</string>
-  <string name="next_reminder">Volgende herinnering</string>
-  <string name="version">Versie %s</string>
-  <string name="are_you_sure_delete_reminder">Weet u zeker dat u de herinnering wilt verwijderen?</string>
-  <string name="clear_events">Duidelijke gebeurtenissen</string>
-  <string name="app_version">App versie</string>
-  <string name="are_you_sure_delete_events">Weet je zeker dat je alle evenementen wilt verwijderen?</string>
-  <string name="export">Evenementen exporteren</string>
-  <string name="swipe_left">Veeg naar links</string>
-  <string name="long_press">Lang indrukken</string>
-  <string name="delete_items">Verwijderen</string>
-  <string name="actions">Acties</string>
-  <string name="information">Informatie</string>
-  <string name="show_notifications">Toon meldingen</string>
-  <string name="overview_events">Overzicht weergavegebeurtenissen</string>
-  <string name="four_hours">4 uur</string>
-  <string name="twelve_hours">12 uren</string>
-  <string name="twenty_four_hours">24 uur</string>
-  <string name="two_days">2 dagen</string>
-  <string name="three_days">3 dagen</string>
-  <string name="app_url">MedTimer op GitHub</string>
-  <string name="color">Kleur</string>
-  <string name="select_color">Selecteer kleur</string>
-  <string name="exact_reminders">Exacte herinneringen</string>
-  <string name="change_color_toast">Houd er rekening mee dat kleurwijzigingen alleen van kracht worden bij toekomstige herinneringen</string>
-  <string name="permission_not_granted">Toestemming niet verleend</string>
-  <string name="exact_reminders_summary">Herinneringen worden op het exacte tijdstip gepland (verhoogt het batterijgebruik)</string>
-  <string name="enable_alarm_dialog">Om het plannen van exacte alarmen mogelijk te maken, schakelt u dit in voor MedTimer in het volgende menu</string>
-  <string name="generate_test_data">Testgegevens genereren</string>
-  <string name="create_reminder_dosage_hint">Dosering voor nieuwe herinnering</string>
-  <string name="notification_tone_title">Meldingstoon</string>
-  <string name="select_format">Selecteer formaat</string>
-  <string name="remind_cycle_part1">Herinner voor</string>
-  <string name="days">dagen</string>
-  <string name="theme">Thema</string>
-  <string name="default_theme">Standaard</string>
-  <string name="alternative">Alternatief</string>
-  <string name="instructions">Instructies</string>
-  <string name="no_instructions">geen instructies</string>
-  <string name="before_meal">vóór de maaltijd</string>
-  <string name="after_meal">na het eten</string>
-  <string name="time_before_meal">x minuten voor de maaltijd</string>
-  <string name="time_after">x uur na medicijn y</string>
-  <string name="instruction_templates">Instructiesjablonen</string>
-  <string name="instructions_label">Aanvullende instructies (bijvoorbeeld vóór de maaltijd)</string>
-  <string name="backup_medicine">Back-upmedicijninstellingen</string>
-  <string name="csv" translatable="false">CSV</string>
-  <string name="pdf" translatable="false">Pdf</string>
-  <string name="create">Creëren</string>
-  <string name="restore">Herstellen</string>
-  <string name="restore_failed">Herstellen mislukt</string>
-  <string name="backup_failed">Back-up mislukt</string>
-  <string name="export_failed">Exporteren is mislukt</string>
-  <string name="restore_successful">Herstel succesvol</string>
-  <string name="restore_start">Dit vervangt alle medicijninstellingen.
+    <string name="app_name">MedTimer</string>
+    <string name="tab_settings">Instellingen</string>
+    <string name="tab_overview">Overzicht</string>
+    <string name="tab_medicine">Geneesmiddel</string>
+    <string name="add_medicine">Medicijn toevoegen</string>
+    <string name="medicine_name">Naam medicijn</string>
+    <string name="add_reminder">Herinnering toevoegen</string>
+    <string name="edit">Bewerking</string>
+    <string name="delete">Verwijderen</string>
+    <string name="time">Tijd</string>
+    <string name="dosage">Dosering</string>
+    <string name="yes">Ja</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Annuleren</string>
+    <string name="confirm">Bevestigen</string>
+    <string name="are_you_sure_delete_medicine">Weet u zeker dat u het geneesmiddel wilt verwijderen?</string>
+    <string name="no_reminders">Geen herinneringen ingesteld</string>
+    <plurals name="sum_reminders">
+        <item quantity="one">%1$d herinnering\n%2$s</item>
+        <item quantity="other">%1$d herinneringen\n%2$s</item>
+    </plurals>
+    <string name="notification_title">Medicijnherinnering</string>
+    <string name="notification_content">Het is %1$s - tijd om %2$s van %3$s%4$s te nemen</string>
+    <string name="notification_taken">GENOMEN</string>
+    <string name="taken">Genomen</string>
+    <string name="skipped">Overgeslagen</string>
+    <string name="reminder_event">%1$s van %2$s, %3$s</string>
+    <string name="recent_events">Recente evenementen</string>
+    <string name="next_reminder">Volgende herinnering</string>
+    <string name="version">Versie %s</string>
+    <string name="are_you_sure_delete_reminder">Weet u zeker dat u de herinnering wilt verwijderen?</string>
+    <string name="clear_events">Duidelijke gebeurtenissen</string>
+    <string name="app_version">App versie</string>
+    <string name="are_you_sure_delete_events">Weet je zeker dat je alle evenementen wilt verwijderen?</string>
+    <string name="export">Evenementen exporteren</string>
+    <string name="swipe_left">Veeg naar links</string>
+    <string name="long_press">Lang indrukken</string>
+    <string name="delete_items">Verwijderen</string>
+    <string name="actions">Acties</string>
+    <string name="information">Informatie</string>
+    <string name="show_notifications">Toon meldingen</string>
+    <string name="overview_events">Overzicht weergavegebeurtenissen</string>
+    <string name="four_hours">4 uur</string>
+    <string name="twelve_hours">12 uren</string>
+    <string name="twenty_four_hours">24 uur</string>
+    <string name="two_days">2 dagen</string>
+    <string name="three_days">3 dagen</string>
+    <string name="app_url">MedTimer op GitHub</string>
+    <string name="color">Kleur</string>
+    <string name="select_color">Selecteer kleur</string>
+    <string name="exact_reminders">Exacte herinneringen</string>
+    <string name="change_color_toast">Houd er rekening mee dat kleurwijzigingen alleen van kracht worden bij toekomstige herinneringen</string>
+    <string name="permission_not_granted">Toestemming niet verleend</string>
+    <string name="exact_reminders_summary">Herinneringen worden op het exacte tijdstip gepland (verhoogt het batterijgebruik)</string>
+    <string name="enable_alarm_dialog">Om het plannen van exacte alarmen mogelijk te maken, schakelt u dit in voor MedTimer in het volgende menu</string>
+    <string name="generate_test_data">Testgegevens genereren</string>
+    <string name="create_reminder_dosage_hint">Dosering voor nieuwe herinnering</string>
+    <string name="notification_tone_title">Meldingstoon</string>
+    <string name="select_format">Selecteer formaat</string>
+    <string name="cycle_consecutive_days">Actieve dagen</string>
+    <string name="days">dagen</string>
+    <string name="theme">Thema</string>
+    <string name="default_theme">Standaard</string>
+    <string name="alternative">Alternatief</string>
+    <string name="instructions">Instructies</string>
+    <string name="no_instructions">geen instructies</string>
+    <string name="before_meal">vóór de maaltijd</string>
+    <string name="after_meal">na het eten</string>
+    <string name="time_before_meal">x minuten voor de maaltijd</string>
+    <string name="time_after">x uur na medicijn y</string>
+    <string name="instruction_templates">Instructiesjablonen</string>
+    <string name="instructions_label">Aanvullende instructies (bijvoorbeeld vóór de maaltijd)</string>
+    <string name="backup_medicine">Back-upmedicijninstellingen</string>
+    <string name="create">Creëren</string>
+    <string name="restore">Herstellen</string>
+    <string name="restore_failed">Herstellen mislukt</string>
+    <string name="backup_failed">Back-up mislukt</string>
+    <string name="export_failed">Exporteren is mislukt</string>
+    <string name="restore_successful">Herstel succesvol</string>
+    <string name="restore_start">Dit vervangt alle medicijninstellingen.
 Doorgaan?</string>
-  <string name="log_additional_dose">Extra dosis registreren</string>
-  <string name="dismiss_notification_action">Actie bij het negeren van de melding</string>
-  <string name="skip_reminder">Dosis overslaan</string>
-  <string name="snooze">Snoozen</string>
-  <string name="snooze_duration">Sluimertijd</string>
-  <string name="minutes_5">5 minuten</string>
-  <string name="minutes_10">10 minuten</string>
-  <string name="minutes_15">15 minuten</string>
-  <string name="minutes_30">30 minuten</string>
-  <string name="minutes_60">60 minuten</string>
-  <string name="notification_skipped">OVERGESLAGEN</string>
-  <string name="notification_snooze">SNOOZEN</string>
-  <string name="weekend_mode">Weekendmodus</string>
-  <string name="weekend_mode_days">Dagen</string>
-  <string name="monday">Maandag</string>
-  <string name="tuesday">Dinsdag</string>
-  <string name="wednesday">Woensdag</string>
-  <string name="thursday">Donderdag</string>
-  <string name="friday">Vrijdag</string>
-  <string name="saturday">Zaterdag</string>
-  <string name="sunday">Zondag</string>
-  <string name="weekend_mode_summary">Stel meldingen op bepaalde dagen van de week uit tot een bepaald tijdstip</string>
-  <string name="custom">Aangepast…</string>
-  <string name="advanced_settings">Geavanceerde instellingen</string>
-  <string name="remind_on">Herinner aan</string>
-  <string name="every_day">Elke dag</string>
-  <string name="remind_cycle_part2">opeenvolgende dagen, en pauzeer dan even</string>
-  <string name="remind_cycle_part3">dagen beginnend</string>
+    <string name="log_additional_dose">Extra dosis registreren</string>
+    <string name="dismiss_notification_action">Actie bij het negeren van de melding</string>
+    <string name="skip_reminder">Dosis overslaan</string>
+    <string name="snooze">Snoozen</string>
+    <string name="snooze_duration">Sluimertijd</string>
+    <string name="minutes_5">5 minuten</string>
+    <string name="minutes_10">10 minuten</string>
+    <string name="minutes_15">15 minuten</string>
+    <string name="minutes_30">30 minuten</string>
+    <string name="minutes_60">60 minuten</string>
+    <string name="notification_skipped">OVERGESLAGEN</string>
+    <string name="notification_snooze">SNOOZEN</string>
+    <string name="weekend_mode">Weekendmodus</string>
+    <string name="weekend_mode_days">Dagen</string>
+    <string name="monday">Maandag</string>
+    <string name="tuesday">Dinsdag</string>
+    <string name="wednesday">Woensdag</string>
+    <string name="thursday">Donderdag</string>
+    <string name="friday">Vrijdag</string>
+    <string name="saturday">Zaterdag</string>
+    <string name="sunday">Zondag</string>
+    <string name="weekend_mode_summary">Stel meldingen op bepaalde dagen van de week uit tot een bepaald tijdstip</string>
+    <string name="custom">Aangepast…</string>
+    <string name="advanced_settings">Geavanceerde instellingen</string>
+    <string name="remind_on">Herinner aan</string>
+    <string name="every_day">Elke dag</string>
+    <string name="cycle_pause_days">Pauzedagen</string>
+    <string name="cycle_start_date">Start eerste cyclus</string>
+    <string name="cycle_reminders">Cyclische herinneringen</string>
 </resources>
