--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="taken">Taken</string>
     <string name="skipped">Skipped</string>
     <string name="reminder_event">%1$s of %2$s, %3$s</string>
-    <string name="recent_reminders">Recent events</string>
+    <string name="recent_events">Recent events</string>
     <string name="next_reminder">Next reminder</string>
     <string name="version">Version %s</string>
     <string name="are_you_sure_delete_reminder">Are you sure to delete the reminder?</string>
@@ -60,7 +60,7 @@
     <string name="create_reminder_dosage_hint">Dosage for new reminder</string>
     <string name="notification_tone_title">Notification tone</string>
     <string name="select_format">Select format</string>
-    <string name="remind_cycle_part1">Remind for</string>
+    <string name="cycle_consecutive_days">Active days</string>
     <string name="days">days</string>
     <string name="theme">Theme</string>
     <string name="default_theme">Default</string>
@@ -109,6 +109,7 @@
     <string name="advanced_settings">Advanced settings</string>
     <string name="remind_on">Remind on</string>
     <string name="every_day">Every day</string>
-    <string name="remind_cycle_part2">consecutive days, then pause for</string>
-    <string name="remind_cycle_part3">days beginning on</string>
+    <string name="cycle_pause_days">Pause days</string>
+    <string name="cycle_start_date">First cycle start</string>
+    <string name="cycle_reminders">Cyclic reminders</string>
 </resources>
