Rework Dutch translation
I found out after i have download the new update some strings where not correct translated, i have fix them now.

--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -3,9 +3,9 @@
     <string name="app_name">MedTimer</string>
     <string name="tab_settings">Instellingen</string>
     <string name="tab_overview">Overzicht</string>
-    <string name="tab_medicine">Geneesmiddel</string>
-    <string name="add_medicine">Medicijn toevoegen</string>
-    <string name="medicine_name">Naam medicijn</string>
+    <string name="tab_medicine">Medicatie</string>
+    <string name="add_medicine">Medicatie toevoegen</string>
+    <string name="medicine_name">Naam van de medicatie</string>
     <string name="add_reminder">Herinnering toevoegen</string>
     <string name="edit">Bewerking</string>
     <string name="delete">Verwijderen</string>
@@ -15,33 +15,33 @@
     <string name="ok">OK</string>
     <string name="cancel">Annuleren</string>
     <string name="confirm">Bevestigen</string>
-    <string name="are_you_sure_delete_medicine">Weet u zeker dat u het geneesmiddel wilt verwijderen?</string>
-    <string name="no_reminders">Geen herinneringen ingesteld</string>
+    <string name="are_you_sure_delete_medicine">Medicatie echt verwijderen?</string>
+    <string name="no_reminders">Geen herinneringen</string>
     <plurals name="sum_reminders">
         <item quantity="one">%1$d herinnering\n%2$s</item>
         <item quantity="other">%1$d herinneringen\n%2$s</item>
     </plurals>
-    <string name="notification_title">Medicijnherinnering</string>
+    <string name="notification_title">Herinneringen van de medicatie</string>
     <string name="notification_content">Het is %1$s - tijd om %2$s van %3$s%4$s te nemen</string>
     <string name="notification_taken">GENOMEN</string>
-    <string name="taken">Genomen</string>
+    <string name="taken">Ingenomen</string>
     <string name="skipped">Overgeslagen</string>
     <string name="reminder_event">%1$s van %2$s, %3$s</string>
-    <string name="recent_events">Recente evenementen</string>
+    <string name="recent_events">Recente gebeurtenissen</string>
     <string name="next_reminder">Volgende herinnering</string>
     <string name="version">Versie %s</string>
     <string name="are_you_sure_delete_reminder">Weet u zeker dat u de herinnering wilt verwijderen?</string>
-    <string name="clear_events">Duidelijke gebeurtenissen</string>
+    <string name="clear_events">Herinneringen</string>
     <string name="app_version">App versie</string>
-    <string name="are_you_sure_delete_events">Weet je zeker dat je alle evenementen wilt verwijderen?</string>
-    <string name="export">Evenementen exporteren</string>
+    <string name="are_you_sure_delete_events">Weet je zeker dat je alle gebeurtenissen wilt verwijderen?</string>
+    <string name="export">Gebeurtenissen exporteren</string>
     <string name="swipe_left">Veeg naar links</string>
     <string name="long_press">Lang indrukken</string>
     <string name="delete_items">Verwijderen</string>
     <string name="actions">Acties</string>
     <string name="information">Informatie</string>
-    <string name="show_notifications">Toon meldingen</string>
-    <string name="overview_events">Overzicht weergavegebeurtenissen</string>
+    <string name="show_notifications">Meldingen weergeven</string>
+    <string name="overview_events">Overzicht herinneringen tonen</string>
     <string name="four_hours">4 uur</string>
     <string name="twelve_hours">12 uren</string>
     <string name="twenty_four_hours">24 uur</string>
@@ -53,13 +53,13 @@
     <string name="exact_reminders">Exacte herinneringen</string>
     <string name="change_color_toast">Houd er rekening mee dat kleurwijzigingen alleen van kracht worden bij toekomstige herinneringen</string>
     <string name="permission_not_granted">Toestemming niet verleend</string>
-    <string name="exact_reminders_summary">Herinneringen worden op het exacte tijdstip gepland (verhoogt het batterijgebruik)</string>
-    <string name="enable_alarm_dialog">Om het plannen van exacte alarmen mogelijk te maken, schakelt u dit in voor MedTimer in het volgende menu</string>
+    <string name="exact_reminders_summary">Herinneringen worden precies op het ingestelde tijdstip gegenereerd (verhoogd batterijverbruik)</string>
+    <string name="enable_alarm_dialog">Om het aanmaken van exacte herinneringen in te schakelen, moet u dit toestaan in het volgende menu</string>
     <string name="generate_test_data">Testgegevens genereren</string>
     <string name="create_reminder_dosage_hint">Dosering voor nieuwe herinnering</string>
-    <string name="notification_tone_title">Meldingstoon</string>
-    <string name="select_format">Selecteer formaat</string>
-    <string name="cycle_consecutive_days">Actieve dagen</string>
+    <string name="notification_tone_title">Waarschuwingstoon</string>
+    <string name="select_format">Formaat selecteren</string>
+    <string name="cycle_consecutive_days">Dagen</string>
     <string name="days">dagen</string>
     <string name="theme">Thema</string>
     <string name="default_theme">Standaard</string>
@@ -70,20 +70,19 @@
     <string name="after_meal">na het eten</string>
     <string name="time_before_meal">x minuten voor de maaltijd</string>
     <string name="time_after">x uur na medicijn y</string>
-    <string name="instruction_templates">Instructiesjablonen</string>
+    <string name="instruction_templates">Referentiesjablonen</string>
     <string name="instructions_label">Aanvullende instructies (bijvoorbeeld vóór de maaltijd)</string>
-    <string name="backup_medicine">Back-upmedicijninstellingen</string>
+    <string name="backup_medicine">Back-up van de medicatie</string>
     <string name="create">Creëren</string>
     <string name="restore">Herstellen</string>
-    <string name="restore_failed">Herstellen mislukt</string>
+    <string name="restore_failed">Herstel mislukt</string>
     <string name="backup_failed">Back-up mislukt</string>
-    <string name="export_failed">Exporteren is mislukt</string>
-    <string name="restore_successful">Herstel succesvol</string>
-    <string name="restore_start">Dit vervangt alle medicijninstellingen.
-Doorgaan?</string>
-    <string name="log_additional_dose">Extra dosis registreren</string>
-    <string name="dismiss_notification_action">Actie bij het negeren van de melding</string>
-    <string name="skip_reminder">Dosis overslaan</string>
+    <string name="export_failed">Export mislukt</string>
+    <string name="restore_successful">Succesvol herstellen</string>
+    <string name="restore_start">Alle medicatie-instellingen worden overschreven.</string>
+    <string name="log_additional_dose">Extra inname toevoegen</string>
+    <string name="dismiss_notification_action">Actie bij het negeren van een melding</string>
+    <string name="skip_reminder">Inname overslaan</string>
     <string name="snooze">Snoozen</string>
     <string name="snooze_duration">Sluimertijd</string>
     <string name="minutes_5">5 minuten</string>
@@ -102,7 +101,7 @@ Doorgaan?</string>
     <string name="friday">Vrijdag</string>
     <string name="saturday">Zaterdag</string>
     <string name="sunday">Zondag</string>
-    <string name="weekend_mode_summary">Stel meldingen op bepaalde dagen van de week uit tot een bepaald tijdstip</string>
+    <string name="weekend_mode_summary">Meldingen op bepaalde dagen van de week uitstellen tot een bepaald tijdstip</string>
     <string name="custom">Aangepast…</string>
     <string name="advanced_settings">Geavanceerde instellingen</string>
     <string name="remind_on">Herinner aan</string>
