Added summary of advanced settings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -109,4 +109,5 @@
     <string name="cycle_pause_days">Tage Pause</string>
     <string name="cycle_start_date">Beginn des ersten Zyklus</string>
     <string name="cycle_reminders">Zyklische Erinnerungen</string>
+    <string name="weekday_limited">Auf manche Wochentage beschränkt</string>
 </resources>
