--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -108,4 +108,5 @@
     <string name="cycle_pause_days">Días de pausa</string>
     <string name="cycle_start_date">Inicio del primer ciclo</string>
     <string name="cycle_reminders">Recordatorios cíclicos</string>
+    <string name="weekday_limited">Limitado a algunos días de la semana</string>
 </resources>
