--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -210,5 +210,6 @@
     <string name="cycle_pause_days">Jours de pause</string>
     <string name="cycle_start_date">Début du premier cycle</string>
     <string name="cycle_reminders">Rappels cycliques</string>
+    <string name="weekday_limited">Limité à certains jours de la semaine</string>
 
 </resources>
