--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -110,4 +110,5 @@
     <string name="cycle_start_date">Start eerste cyclus</string>
     <string name="cycle_reminders">Cyclische herinneringen</string>
     <string name="weekday_limited">Beperkt tot sommige dagen van de week</string>
+    <string name="reminders">Herinneringen</string>
 </resources>
