--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -110,4 +110,5 @@
     <string name="cycle_reminders">Recordatorios cíclicos</string>
     <string name="weekday_limited">Limitado a algunos días de la semana</string>
     <string name="reminders">Recordatorios</string>
+    <string name="filter">Filtro</string>
 </resources>
