--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,5 @@
     <string name="weekday_limited">Limited to some weekdays</string>
     <string name="reminders">Reminders</string>
     <string name="sort" translatable="false">Sort</string>
+    <string name="filter">Filter</string>
 </resources>
