--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -109,4 +109,6 @@
     <string name="cycle_start_date">Inicio del primer ciclo</string>
     <string name="cycle_reminders">Recordatorios cíclicos</string>
     <string name="weekday_limited">Limitado a algunos días de la semana</string>
+    <string name="reminders">Recordatorios</string>
+    <string name="filter">Filtro</string>
 </resources>
