--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     <string name="reminders">Reminders</string>
     <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filter</string>
+    <string name="statistics">Statistics</string>
 </resources>
