--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -213,6 +213,7 @@
     <string name="weekday_limited">Limité à certains jours de la semaine</string>
     <string name="reminders">Rappels</string>
     <string name="filter">Filtre</string>
-    <string name="statistics">Statistique</string>
+    <string name="analysis">Analyse</string>
+    <string name="tabular_view">Vue tabulaire</string>
 
 </resources>
