--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -112,5 +112,6 @@
     <string name="weekday_limited">Beperkt tot sommige dagen van de week</string>
     <string name="reminders">Herinneringen</string>
     <string name="filter">Filter</string>
-    <string name="statistics">Statistieken</string>
+    <string name="analysis">Analyse</string>
+    <string name="tabular_view">Tabelwergave</string>
 </resources>
