--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -111,4 +111,5 @@
     <string name="weekday_limited">Limitado a algunos días de la semana</string>
     <string name="reminders">Recordatorios</string>
     <string name="filter">Filtro</string>
+    <string name="one_week">7 días</string>
 </resources>
