--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -213,5 +213,6 @@
     <string name="weekday_limited">Limité à certains jours de la semaine</string>
     <string name="reminders">Rappels</string>
     <string name="filter">Filtre</string>
+    <string name="one_week">7 jours</string>
 
 </resources>
