--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -111,7 +111,9 @@
     <string name="weekday_limited">Limitado a algunos días de la semana</string>
     <string name="reminders">Recordatorios</string>
     <string name="filter">Filtro</string>
-    <string name="one_week">7 días</string>
+    <string name="seven_days">7 días</string>
     <string name="analysis">Análysis</string>
     <string name="tabular_view">Vista tabular</string>
+    <string name="fourteen_days">14 días</string>
+    <string name="thirty_days">30 días</string>
 </resources>
