--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -218,5 +218,7 @@
     <string name="tabular_view">Vue tabulaire</string>
     <string name="fourteen_days">14 jours</string>
     <string name="thirty_days">30 jours</string>
+    <string name="total">Total</string>
+    <string name="last_n_days">Dernier %1$d jours</string>
 
 </resources>
