Fixed German text

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -113,7 +113,7 @@
     <string name="reminders">Erinnerungen</string>
     <string name="filter">Filter</string>
     <string name="seven_days">7 Tage</string>
-    <string name="analysis">Auswertung</string>
+    <string name="analysis">Analyse</string>
     <string name="tabular_view">Tabellenansicht</string>
     <string name="fourteen_days">14 Tage</string>
     <string name="thirty_days">30 Tage</string>
