--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -118,4 +118,5 @@
     <string name="thirty_days">30 días</string>
     <string name="total">Total</string>
     <string name="last_n_days">Últimos %1$d días</string>
+    <string name="name">Nombre</string>
 </resources>
