--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -119,4 +119,5 @@
     <string name="thirty_days">30 dagen</string>
     <string name="total">Totaal</string>
     <string name="last_n_days">Laatste %1$d dagen</string>
+    <string name="name">Naam</string>
 </resources>
